spec/invalid-syntax-examples/no-equals.bowtie
result : Int
result
  0
